haskell-logic (0.40) unstable; urgency=low

  * Remove NoProof constructor from Proof type - we only need this in
    the augumented Proof' type in the ontology package.

 -- David Fox <dsf@seereason.com>  Sat, 06 Aug 2011 06:28:20 -0700

haskell-logic (0.39) unstable; urgency=low

  * Move Proof type from ontology to logic.

 -- David Fox <dsf@seereason.com>  Thu, 04 Aug 2011 07:13:00 -0700

haskell-logic (0.38) unstable; urgency=low

  * Remove the triple of function parameters for converting formulas to
    literals, these were all invariably id.

 -- David Fox <dsf@seereason.com>  Tue, 02 Aug 2011 07:34:54 -0700

haskell-logic (0.37) unstable; urgency=low

  * Add an Ord instance to ProofResult so we can insert proofs into sets.

 -- David Fox <dsf@seereason.com>  Mon, 01 Aug 2011 09:51:59 -0700

haskell-logic (0.36) unstable; urgency=low

  * Move module Test.Types to Data.Logic.Test and export so that clients
    of this package can use the definitions to create test cases.

 -- David Fox <dsf@seereason.com>  Sun, 24 Jul 2011 10:45:50 -0700

haskell-logic (0.35) unstable; urgency=low

  * Remove the Pretty class.  Pretty printing of a type is application
    specific, so the type class doesn't make sense.  Instead add function
    parameters to prettyForm et. al. to convert the primitive types to
    Doc.

 -- David Fox <dsf@seereason.com>  Fri, 22 Jul 2011 09:01:45 -0700

haskell-logic (0.34) unstable; urgency=low

  * Allow .=. literals in the Native instance.  This required a fix to the
    resolution prover so that it never did substitutions based on an
    equality predicate which had the same lhs and rhs.

 -- David Fox <dsf@seereason.com>  Thu, 21 Jul 2011 22:30:14 -0700

haskell-logic (0.33) unstable; urgency=low

  * Move the modules into the Data heirarchy.

 -- David Fox <dsf@seereason.com>  Sun, 17 Jul 2011 07:29:49 -0700

haskell-logic (0.32) unstable; urgency=low

  * Add a Pred class to describe predicate application